Version History :
-----------------
v10.1.14
- abstractClasses: the Environment class now has an __init_callback__ method
  which is called after __init__. This will let the environments to call their
  own init commands.
- nukeEnv: fixed the retrieval of a file path from the root node

v10.1.13
- assetManager: added shot description field and organized the interface by
  adding group boxes

v10.1.12
- assetManager: nuke was complaning about the new frame range adjustments
  because it is not implemented yet. Added checks for the frame range being
  None

v10.1.11
- assetManager: added control of shot range while opening or saving shot
  dependent assets
- assetManager: the MainDialog now has a unified environment and asset objects
  which are shared in its methods
- mayaEnv : added shot range get and set methods
- projectModel: added getShot to Sequence class, which returns the Shot object
  with given shot name
- abstractClasses: Environment class now has a property named asset to get and
  set asset of the environment
- shotEditor: the cancel button renamed to close
- environmentFactory: to help creating environments a new class is introduced
- shotEditor: a lot of bugs are eliminated, the interface works much better now
- assetManager: the messages are now formatted with HTML tags

v10.1.5
- houdiniEnv: fixed IOError for missing file.history file

v10.1.4
- projectModel: fixed a typo in sequence classes addShots method
- nukeEnv : fixed the path problems for autosave files under Windows

v9.12.30
- projectModel: fixed listing of folders instead of just files in sequence
  class
- houdiniEnv: now uses the inverse of the recent files list

v9.12.29
- projectModel: the sequence class now can undo the last change in the
  .settings.xml, but beware that there is no redo implementation yet
- projectModel: added name check before adding a new assetType
- projectModel: added again the extension checking for the files returned from